[gd_scene load_steps=21 format=3 uid="uid://b1t0ydjtelhlv"]

[ext_resource type="Script" path="res://Entities/bat.gd" id="1_0mwnt"]
[ext_resource type="Script" path="res://Health/health.gd" id="3_oaifi"]
[ext_resource type="Script" path="res://Health/hurtbox.gd" id="4_8hcdp"]
[ext_resource type="Texture2D" uid="uid://bd4d3hed7m5tg" path="res://assets/bat/bat_death.png" id="4_bgkie"]
[ext_resource type="Texture2D" uid="uid://bjbwv2uctho4m" path="res://assets/Limbo/bat.png" id="4_cc7vk"]
[ext_resource type="Script" path="res://Health/hitbox.gd" id="5_qpnn6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mvubl"]
radius = 12.0416

[sub_resource type="CircleShape2D" id="CircleShape2D_utsxi"]
radius = 23.0217

[sub_resource type="AtlasTexture" id="AtlasTexture_sikxs"]
atlas = ExtResource("4_bgkie")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6idy"]
atlas = ExtResource("4_bgkie")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7173"]
atlas = ExtResource("4_bgkie")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrxds"]
atlas = ExtResource("4_bgkie")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61n76"]
atlas = ExtResource("4_bgkie")
region = Rect2(0, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4v3x"]
atlas = ExtResource("4_bgkie")
region = Rect2(64, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvkcv"]
atlas = ExtResource("4_bgkie")
region = Rect2(0, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wafl0"]
atlas = ExtResource("4_bgkie")
region = Rect2(64, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1lc7"]
atlas = ExtResource("4_cc7vk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5rw0"]
atlas = ExtResource("4_cc7vk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8fhto"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sikxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6idy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7173")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrxds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61n76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4v3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvkcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wafl0")
}],
"loop": false,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1lc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5rw0")
}],
"loop": true,
"name": &"fly",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cknmv"]
radius = 15.1327

[node name="Bat" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_0mwnt")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mvubl")

[node name="Health" type="Node" parent="."]
script = ExtResource("3_oaifi")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("4_8hcdp")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_utsxi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -1.5708
scale = Vector2(2.28125, 2.28125)
sprite_frames = SubResource("SpriteFrames_8fhto")
animation = &"fly"
speed_scale = 3.74

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("5_qpnn6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_cknmv")

[connection signal="health_empty" from="Health" to="." method="_on_health_empty"]
